Revert "Merge remote-tracking branch 'upstream/master' into master-jdk17"
This reverts commit b2b9655463a766bb779ae5b052181e34e29e850a, reversing
changes made to 74e0c66f22cd9e8cca5c5076903550d54d980c18.